--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "parcel src/countrie.html",
+    "build": "parcel build src/countrie.html"
   },
   "author": "",
   "license": "ISC",
