--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/countrie.html",
-    "build": "parcel build src/countrie.html"
+    "start": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "parcel-bundler": "^1.12.5",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "parcel-bundler": "^1.12.5"
+  },
+  "devDependencies": {
+    "prettier": "3.3.2"
   }
 }
