--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url"
+    "build": "parcel build src/*.html --dist-dir build --public-url ./",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
